# lichen

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/installer/: Cargo.toml  README.md
crates/installer/src/: account.rs  engine.rs  lib.rs  model.rs  partitions.rs  selections.rs  systemd.rs
crates/installer/src/steps/: cleanup.rs  context.rs  mod.rs  packaging.rs  partitions.rs  postinstall.rs
crates/lichen/: Cargo.toml
crates/lichen/src/: icon.rs  lib.rs
crates/system/: Cargo.toml  README.md
crates/system/src/: lib.rs
crates/system/src/disk/: disks.rs  mod.rs  partition.rs
crates/system/src/locale/: iso_3166.rs  iso_639_2.rs  iso_639_3.rs  mod.rs  registry.rs
crates/tui/: Cargo.toml
crates/tui/src/: application.rs  element.rs  lib.rs  screen.rs  shell.rs  widget.rs
crates/tui/src/widget/: block.rs  box_layout.rs  button.rs  paragraph.rs  spinner.rs  text.rs  text_box.rs  wrap.rs
gui/: Cargo.toml
gui/src/: app.rs  lib.rs  main.rs
lichen_cli/: Cargo.toml
lichen_cli/src/: main.rs
lichen_gui/: Cargo.toml
lichen_gui/src/: lib.rs  main.rs
lichen_gui/src/pages/: language.rs  mod.rs  page.rs  welcome.rs
lichen_ipc/: Cargo.toml  README.md  build.rs
lichen_ipc/src/: com_serpentos_lichen_disks.rs  disks.rs  lib.rs  main.rs
lichen_rpc/: Cargo.toml  README.md
lichen_rpc/src/: com.serpentos.lichen.disks.varlink  disks.rs  lib.rs  main.rs
lichen_tui/: Cargo.toml
lichen_tui/src/: lib.rs  main.rs  theme.rs
lichen_tui/src/page/: mod.rs  timezone.rs  user.rs  welcome.rs
selections/: README.md  base.json  cosmic.json  develop.json  gnome.json  kernel-common.json  kernel-desktop.json
src/: application.rs  boxlayout.rs  button.rs  component.rs  element.rs  event.rs  lib.rs  main.rs  screen.rs  shell.rs  textbox.rs  theme.rs  tui.rs  widget.rs
src/page/: mod.rs  timezone.rs  user.rs  welcome.rs
src/pages/: mod.rs  user.rs  users.rs  welcome.rs
src/system/: disks.rs  iso_3166.rs  iso_639.rs  mod.rs
src/system/disk/: disk.rs  mod.rs  partition.rs
src/system/locale/: iso_3166.rs  iso_639.rs  iso_639_2.rs  mod.rs  registry.rs
src/tui/: application.rs  element.rs  event.rs  layout.rs  screen.rs  shell.rs  widget.rs
src/tui/widget/: block.rs  box_layout.rs  button.rs  paragraph.rs  spinner.rs  text.rs  text_box.rs  wrap.rs
tui/: Cargo.toml
tui/src/: lib.rs  main.rs  screen.rs
