[workspace]
members = [
    "crates/*",
    "lichen_cli",
]
resolver = "2"

[workspace.dependencies]
bitflags = "2.6.0"
chrono-tz = "0.10.0"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
human_bytes = "0.4.3"
fs-err = { version = "3.0.0", features = ["tokio"] }
libc = "0.2.155"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
superblock = { git = "https://github.com/serpent-os/blsforme.git"}
topology = { git = "https://github.com/serpent-os/blsforme.git"}
thiserror = "2.0.3"
