[workspace]
members = [
    "crates/*",
    "lichen_cli",
    "lichen_ipc"
]
default-members = [
    "lichen_cli"
]
resolver = "2"

[workspace.dependencies]
bitflags = "2.6.0"
chrono-tz = "0.10.0"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
env_logger = "0.11.5"
fs-err = { version = "3.0.0", features = ["tokio"] }
human_bytes = "0.4.3"
libc = "0.2.155"
log = "0.4.22"
nix = "0.29"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
superblock = { git = "https://github.com/serpent-os/blsforme.git"}
thiserror = "2.0.3"
topology = { git = "https://github.com/serpent-os/blsforme.git"}
varlink = { version = "11.0.1" }
varlink_generator = { version = "10.1.0 "}
