[workspace]
members = [
    "crates/*",
    "lichen_cli",
    "lichen_ipc"
]
default-members = [
    "lichen_cli"
]
resolver = "2"

[workspace.dependencies]
bitflags = "2.8.0"
chrono-tz = "0.10.1"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
env_logger = "0.11.6"
fs-err = { version = "3.1.0", features = ["tokio"] }
human_bytes = "0.4.3"
libc = "0.2.169"
log = "0.4.25"
nix = "0.29"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.138"
superblock = { git = "https://github.com/serpent-os/blsforme.git"}
thiserror = "2.0.11"
topology = { git = "https://github.com/serpent-os/blsforme.git"}
varlink = { version = "11.0.1" }
varlink_generator = { version = "10.1.0 "}

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
semicolon_in_expressions_from_macros = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
