[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", version = "0.1.0", default-features = false, features = ["winit", "wgpu"] }
