[package]
name = "lichen_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre.workspace = true
chrono-tz.workspace = true
crossterm.workspace = true
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-matcher", "fuzzy-select"] }
indicatif = "0.17.8"
installer = { path = "../crates/installer" }
console = "0.15.8"
nix = "0.29"
env_logger = "0.11.5"
