[package]
name = "lichen_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre.workspace = true
chrono-tz.workspace = true
crossterm.workspace = true
cliclack = { git = "https://github.com/ikeycode/cliclack.git", rev = "35a1882c601b90bf1398c3cb867cc6b20bbe9ce9" }
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-matcher", "fuzzy-select"] }
indicatif = "0.17.11"
indoc = "2.0.5"
installer = { path = "../crates/installer" }
console = "0.15.10"
nix.workspace = true
env_logger.workspace = true

[lints]
workspace = true
