[package]
name = "lichen_ipc"
version = "0.1.0"
edition = "2021"

[build-dependencies]
varlink_generator.workspace = true

[dependencies]
log.workspace = true
system = { path = "../crates/system"}
nix.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
varlink.workspace = true
clap = { version = "4.5.30", features = ["derive"] }
color-eyre.workspace = true
pretty_env_logger = { version = "0.5.0" }

[lints]
workspace = true
