[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui-realm-stdlib = { version = "1.3.2", default-features = false, features = ["ratatui", "crossterm"] }
tuirealm = { version = "1.9.2", default-features = false, features = ["ratatui", "crossterm", "derive"] }
