[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[dependencies]
libc.workspace = true
log.workspace = true
human_bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
system = { path = "../system" }
thiserror.workspace = true
topology.workspace = true
fs-err.workspace = true
