[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
log.workspace = true
ratatui.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tui-textarea = "0.5.3"
